# simple_analytics_python

./: .gitignore  CODE_REVIEW.md  README.md  pyproject.toml
analytics_viewer/: HIG_REVIEW.md  INSTALL_GSETTINGS.md  MANIFEST.in  PACKAGING.md  README.md  install.sh  pyproject.toml  uninstall.sh
analytics_viewer/analytics_viewer/: __init__.py  cairo_charts.py  charts.py  com.simpleanalytics.viewer.gschema.xml  constants.py  keyring.py  logging_config.py  main.py  modern_charts.py  org.andypiper.SimpleAnalyticsViewer.gschema.xml  preferences.py  shortcuts.py  style.css  window.py
analytics_viewer/analytics_viewer/views/: countries.py  dashboard.py  devices.py  events.py  pages.py  referrers.py
analytics_viewer/data/: org.andypiper.SimpleAnalyticsViewer.desktop  org.andypiper.SimpleAnalyticsViewer.metainfo.xml
examples/: README.md  basic_stats.py  basic_usage.py  country_chart.py  events_chart.py  events_timeline.py  export_data.py  histogram_chart.py  pages_chart.py  uv_basic_stats.py  uv_country_chart.py  uv_export_data.py  uv_histogram_chart.py  uv_pages_chart.py
simple_analytics/: README.md  __init__.py  admin.py  client.py  exceptions.py  export.py  stats.py  types.py
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py
