[project]
name = "simple-analytics-viewer"
version = "0.1.0"
description = "GNOME GTK4 application for viewing Simple Analytics data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygobject>=3.46.0",
    "simple-analytics-python @ file://../",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
]

[project.scripts]
analytics-viewer = "analytics_viewer.main:main"

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
